fix overlapped close button with delete button in the menu
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK@9148 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/trunk/View/webapp/wdk/css/Strategy.css
+++ b/trunk/View/webapp/wdk/css/Strategy.css
@@ -427,7 +427,7 @@ div.transform a.crumb_name img{
   white-space: nowrap;
   border-bottom: 2px solid #000000;
   padding: 6px 0px 5px 0px;
-  min-width: 460px;
+  min-width: 510px;
   height: 12px;
   cursor:move;
 }
